SiteAssets/pages/3.0/scripts/hazards.list.css
.cell {
  float: left;
  padding: 1%;
  width: 98%;
  height: 100%
}
.fld {
  background-color: rgba(0, 0, 0, 0.1);
  border: 1px solid rgb(33, 107, 153);
  border-radius: 5px;
  height: 1px;

}
.assessment {
  background-color: rgba(0, 0, 0, 0.1);
  border: 1px solid rgb(255, 255, 255);
}

.collapse {
  border-collapse: collapse;
}

.permissions {
  position: absolute;
  top: 10px;
  right: 150px;
}

.requiredreviews {
  position: absolute;
  top: 10px;
  right: 15px;
}
.prm-cell {
  float: left;
  width: 10px;
  height: 10px;
  display: block;
  margin: 0 2px 0 0;
}
._0 {
  background-color: rgb(150, 150, 150);
}
._1 {
  background-color: rgb(0, 255, 0);
}
._2 {
  background-color: rgb(255, 0, 0);
}
._3 {
  background-color: rgb(255, 255, 0);
}
._4 {
  background-color: aqua;
}
._5 {
  background-color: rgb(0, 0, 0);
}

.pops-fullscreen {
  display: none;
  width: 98%;
  height: auto;
  /* width:90%; */
  /* min-height:250px; */
  background-color: rgba(0, 0, 0, 0.9);
  border: 2px solid rgb(0, 255, 0);
  color: rgb(255, 255, 255);
  /* text-align: center; */
  position: fixed;
  top: 25;
  bottom: 25;
  left: 25;
  right: 25;
  /* margin:auto; */
  z-index: 1100;
  overflow: scroll;
}

.highlight {
  background-color: rgba(0, 0, 0, 0.6);
  color: rgb(255, 255, 255);
}
.rag-tbl {
  min-width: 250px;
}

.sk-circle {
  margin: 100px auto;
  width: 40px;
  height: 40px;
  position: relative;
  color: #fff;
}
.sk-circle .sk-child {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
}
.sk-circle .sk-child:before {
  content: "";
  display: block;
  margin: 0 auto;
  width: 15%;
  height: 15%;
  background-color: rgb(51, 51, 51);
  border-radius: 100%;
  -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
  animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
}
.sk-circle .sk-circle2 {
  -webkit-transform: rotate(30deg);
  -ms-transform: rotate(30deg);
  transform: rotate(30deg);
}
.sk-circle .sk-circle3 {
  -webkit-transform: rotate(60deg);
  -ms-transform: rotate(60deg);
  transform: rotate(60deg);
}
.sk-circle .sk-circle4 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}
.sk-circle .sk-circle5 {
  -webkit-transform: rotate(120deg);
  -ms-transform: rotate(120deg);
  transform: rotate(120deg);
}
.sk-circle .sk-circle6 {
  -webkit-transform: rotate(150deg);
  -ms-transform: rotate(150deg);
  transform: rotate(150deg);
}
.sk-circle .sk-circle7 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}
.sk-circle .sk-circle8 {
  -webkit-transform: rotate(210deg);
  -ms-transform: rotate(210deg);
  transform: rotate(210deg);
}
.sk-circle .sk-circle9 {
  -webkit-transform: rotate(240deg);
  -ms-transform: rotate(240deg);
  transform: rotate(240deg);
}
.sk-circle .sk-circle10 {
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
}
.sk-circle .sk-circle11 {
  -webkit-transform: rotate(300deg);
  -ms-transform: rotate(300deg);
  transform: rotate(300deg);
}
.sk-circle .sk-circle12 {
  -webkit-transform: rotate(330deg);
  -ms-transform: rotate(330deg);
  transform: rotate(330deg);
}
.sk-circle .sk-circle2:before {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}
.sk-circle .sk-circle3:before {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}
.sk-circle .sk-circle4:before {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}
.sk-circle .sk-circle5:before {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}
.sk-circle .sk-circle6:before {
  -webkit-animation-delay: -0.7s;
  animation-delay: -0.7s;
}
.sk-circle .sk-circle7:before {
  -webkit-animation-delay: -0.6s;
  animation-delay: -0.6s;
}
.sk-circle .sk-circle8:before {
  -webkit-animation-delay: -0.5s;
  animation-delay: -0.5s;
}
.sk-circle .sk-circle9:before {
  -webkit-animation-delay: -0.4s;
  animation-delay: -0.4s;
}
.sk-circle .sk-circle10:before {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}
.sk-circle .sk-circle11:before {
  -webkit-animation-delay: -0.2s;
  animation-delay: -0.2s;
}
.sk-circle .sk-circle12:before {
  -webkit-animation-delay: -0.1s;
  animation-delay: -0.1s;
}

@-webkit-keyframes sk-circleBounceDelay {
  0%,
  80%,
  100% {
    -webkit-transform: scale(0);
    transform: scale(0);
  }
  40% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

@keyframes sk-circleBounceDelay {
  0%,
  80%,
  100% {
    -webkit-transform: scale(0);
    transform: scale(0);
  }
  40% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

.rag-tbl {
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-collapse: collapse;
  width: 100%;
}

.rag-tbl td {
  vertical-align: top;
}

.padded {
  padding: 8px;
}

.rag-tbl-red {
  background-color: rgba(255, 0, 0, 0.5);
}

.rag-tbl-red tr:hover {
  background-color: rgba(0, 0, 0, 0.6);
  color: rgb(255, 255, 255);
}

.rag-tbl-amber {
  background-color: rgba(255, 153, 0, 0.5);
}

.rag-tbl-amber tr:hover {
  background-color: rgba(0, 0, 0, 0.6);
  color: rgb(255, 255, 255);
}

.rag-tbl-green {
  background-color: rgba(0, 255, 0, 0.5);
}

.rag-tbl-green tr:hover {
  background-color: rgba(0, 0, 0, 0.6);
  color: rgb(255, 255, 255);
}

.tpos-highlight-dark {
  background-color: rgba(0, 0, 0, 0.6);
  color: rgb(255, 255, 255);
  padding: 5px;
}
.ramsonly {
  display: none;
}

.tpos-intro {
  display: block;
  width: 100%;
  float: left;
}

.pointer {
  cursor: pointer;
}

.ctagtd {
  text-align: center;
}

.bigger {
  height: 60vh;
}

.txt-centered {
  text-align: center;
  vertical-align: middle;
}
.txt-lbl {
  font-weight: bold;
}
.bordered-rag {
  /* border: 1px solid rgb(0, 0, 0); */
  background-color: rgb(0, 0, 0);
  color: rgb(255, 255, 255);
}
.bordered-risk {
  /* border: 1px solid rgb(0, 0, 0); */
  background-color: rgb(50,50,50);
  color: rgb(255, 255, 255);
}

#DeltaPlaceHolderSearchArea{
  display: none;
}

.cdmsearch{
  position: absolute;
  top:40px;
  right:15px;
  width:250px;
  font-size: 12pt;
}
.tpos-svramsbtn{
  display: block;
  padding:5px;
  border-radius: 3px;
  background-color: rgb(0,0,0);
  color:rgb(255,255,255);
  text-align: center;
  border:1px solid #21E500;
  width:65px;
  float:left;
  cursor: pointer;
}
.tpos-svramsbtn:hover{
  background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,0.72) 63%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
  background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0.72) 63%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
  background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%,rgba(255,255,255,0.72) 63%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
  color:rgb(0, 0, 0);
  
}

.content{
  min-height:50px;
}

.tborder{
  border-top:1px solid rgb(121, 57, 247);
  margin-top:16px;
}

.navwrapper{
  
  margin: 0 auto;
  margin-top: 1.2em;
  text-align: center;
  padding: 8px;
  display: block;
  width: 142px;
  color: rgba(0, 0, 0, 1);
  font-weight: bold;
  cursor: pointer;
  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
  background: rgba(255, 255, 255, 0.8);
  color: rgb(0, 0, 0);
  overflow: auto;
}

.clsbtn{
  position: absolute;
  right:100px;
  top:200px;
  display: block;
  padding:5px;
  border-radius: 3px;
  background-color: rgb(0,0,0);
  color:rgb(255,255,255);
  text-align: center;
  border:1px solid #21E500;
  width:65px;

  cursor: pointer;

}

.db-wrapper{
  display: block;
  float:left;
  margin:0.25%;
  padding:0.25%;
  width:150px;
  height:150px;
}
.customfiltersection{
  width:  75%;
}

.block-container {
  display: flex;
  height: auto;
}

.tpos-initial-risk-lbl {
  display: inline-flex
}

.expand-risk-matrix {
  display: inline-flex;
  cursor: pointer;
}

#txtform{
  background:white;
  width: 97%
}

.cdmPWElement{
  height: fit-content
}

